--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -16,24 +16,29 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #1a1a1a;
   text-decoration: inherit;
 }
-a:hover {
+/* a:hover {
   color: #535bf2;
-}
+} */
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
+  /* display: flex; */
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
 
 h1 {
+  margin: 0rem;
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+p {
+  margin: 0
 }
 
 button {
