--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -1,8 +1,25 @@
 #root {
-  /* max-width: 1280px; */
+  /*    max-width: 1280px;
+ */
   margin: 0 auto;
   /* padding: 2rem; */
   text-align: center;
+}
+
+.appContainer {
+  display: flex;
+  /*   justify-content: center;
+ */
+  align-items: center;
+  flex-direction: column;
+
+  /* height: fit-content; */
+  background-image: url("../assets/img/background.jpg");
+  background-size:cover; /* Ajusta el tamaño de la imagen para que cubra todo el fondo */
+  background-position:-11rem;
+  background-repeat: no-repeat; /* Evita la repetición de la imagen de fondo */
+  background-attachment: fixed;
+  height:100%;
 }
 
 /* .logo {
