--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -84,3 +84,12 @@ select {
     background-color: #f9f9f9;
   }
 }
+
+::-webkit-scrollbar {
+  width: 4px; /* Solo para navegadores webkit (Chrome, Safari) */
+}
+
+/* Cambiar el color de la barra de desplazamiento */
+::-webkit-scrollbar-thumb {
+  background-color: #7d5700;; /* Solo para navegadores webkit */
+}
