--- a/client/src/components/Filters/Filters.module.css
+++ b/client/src/components/Filters/Filters.module.css
@@ -8,21 +8,14 @@
   position: sticky;
   top: 25%;
   height: fit-content;
-  background-color: rgba(0, 0, 0, 0.26);
+  background-color: var(--background-color-containers);
   /* border-right: 1px solid #ffb300; */
-  border-left: 1px solid #ffb300;
+  border-left: 1px solid var(--color-elements);
   padding: 2rem;
-  border-radius: 1rem;
-
-  /*     width: 5rem;
- */ /* top: 20rem; */ /* Puedes ajustar la posición superior según tus necesidades */
-  /* left: 0;  */
-  /* z-index: 999; */
+  border-radius: var(--border-radius);
 }
 
 .filterButton {
     padding: 8px;
-    border-radius: 1rem;
-    
-
+    border-radius: var(--border-radius);
 }
