--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -4,9 +4,9 @@
     width: 11rem;
     height: 23rem;
     padding: 1em;
-    border-radius: 10px;
+    border-radius: var(--border-radius);
     border: 1px solid black ;
-    background-color: #ffb300;
+    background-color: var(--color-elements);
     gap: .5rem;
     /* z-index: 100; */
 }
@@ -16,7 +16,7 @@
     height: 10rem;
     object-fit: cover;
     border: .9px solid black;
-    border-radius: 15px;
+    border-radius: var(--border-radius);;
     margin-top: .5rem;
     transition: .5s;
 }
@@ -32,5 +32,5 @@
 }
 
 .cardTeams {
-    overflow-y:hidden;
+    overflow-y: scroll;
 }
