--- a/client/src/components/Detail/Detail.module.css
+++ b/client/src/components/Detail/Detail.module.css
@@ -1,15 +1,15 @@
 .detailContainer {
-  background-color: #0000009f;
+  background-color: var(--background-color-containers);
   padding: 2.5rem;
-  border-radius: 1rem;
+  border-radius: var(--border-radius);
   margin: 1.8rem 0 4rem;
   /*   height: 100%;
  */
-  border-left: 1px solid #ffb300;
+  border-left: 1px solid var(--color-elements);
 }
 
 .detail {
-  background-color: #ffb300;
+  background-color: var(--color-elements);
   display: flex;
   justify-content: space-around;
   width: 50vw;
@@ -17,13 +17,13 @@
   gap: 2rem;
   padding: 1rem;
   padding: 1.5rem;
-  border-radius: 1rem;
+  border-radius: var(--border-radius);
 }
 
 .detailImage {
   max-width: 28rem;
   max-height: 28rem;
-  border-radius: 1rem;
+  border-radius: var(--border-radius);
 }
 
 .detailInfo {
@@ -42,9 +42,6 @@
 
 .detailDescription {
   overflow-y:scroll;
-  scrollbar-color:  #3498db;
-  ::-webkit-scrollbar {
-    width: 12px; /* Solo para navegadores webkit (Chrome, Safari) */
-  }
+  text-align:left;
 }
 
