--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -1,7 +1,7 @@
 .navContainer {
   display: flex;
   justify-content: space-evenly;
-  background-color: rgba(0, 0, 0, 0.26);
+  background-color: var(--background-color-containers);
   padding: 1rem;
   margin-bottom: 1rem;
   position: sticky;
@@ -9,7 +9,7 @@
 
 /*   border-bottom: 1px rgb(0, 0, 0) ;
  */  /* border-right: 1px solid #ffb300; */
-  border-left: 1px solid #ffb300; 
-  border-radius: 0 0 10px 10px;
+  border-left: 1px solid var(--color-elements); 
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
   width: 80%;
 }
